# SAI-Challenger

./: .dockerignore  .gitignore  .gitmodules  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Dockerfile.client  Dockerfile.sai  Dockerfile.sai.server  Dockerfile.saithrift  Dockerfile.saivs  Dockerfile.saivs.intel  Dockerfile.saivs.server  Dockerfile.server  LICENSE  MAINTAINERS.md  README.md  build.sh  exec.sh  pytest.ini  run.sh  run_client_server.sh  sai.env  setup.py  veth-create-host.sh
cli/: README.md  main.py
common/: sai.py  sai_abstractions.py  sai_constants.py  sai_data.py  sai_dataplane.py  sai_dpu.py  sai_dut.py  sai_environment.py  sai_logger.py  sai_npu.py  sai_npu_vs.py  sai_object.py  sai_phy.py  sai_testbed.py  setup.py
configs/: supervisord.conf
dataplane/: ptf_testutils.py  traffic_utils.py
dockerfiles/: Dockerfile  Dockerfile.client  Dockerfile.saithrift-client  Dockerfile.server
docs/: architecture.md  client_attrs_spec.md  client_server_mode.md  flex_counter.md  loglevel.md  porting_guide.md  sai-testbed-uml.uxf  sai_clients.md  sai_dataplane.md  sai_operation.md  saiphy.md  sonic_usecase.md  standalone_mode.md  testbed_definition.md
npu/: sai_npu_tofino.py  sai_npu_vs.py
patches/: sai_v1.6.3.patch
scripts/: lanemap.ini  redis-cmd-listener.py  redis_start.sh  sai-cli-completion.sh  sai.json  supervisord.conf  veth-create.sh  wait-interfaces.sh
scripts/gen_attr_list/: CMakeLists.txt  generate_attrs.cpp
setups/: sai_dpu_client_server.json  saivs_client_server.json  saivs_standalone.json  snappi_bmv2_client_server.json  (+1 more)
sku/: 32x100g.json  (+2 more)
(+262 files in other folders)
